integrate sprint 3 code

--- a/wp-content/themes/intrepid/templates_html/header.html
+++ b/wp-content/themes/intrepid/templates_html/header.html
@@ -14,7 +14,7 @@
     <header class="header">
         <div class="header__wrap">
             <div class="header__branding">
-                <a href="<?php echo site_url(); ?>" class="logo"><img src="<?php echo IMAGES; ?>/logo.svg" alt="Intrepid Powerboats"/></a>
+                <a href="index.html" class="logo"><img src="images/logo.svg" alt="Intrepid Powerboats"/></a>
             </div>
             <button class="mobile-nav__toggle" data-class="nav__toggle">
                 <span class="accessible-text">Click to toggle navigation menu.</span>
@@ -25,35 +25,35 @@
                 <div class="nav-container__inner">
                     <ul class="primary-nav">
                         <li class="menu__item menu-item-has-children current-menu-item mega-menu">
-                            <a href="<?php echo site_url('boats'); ?>">Models</a>
+                            <a href="model.html">Models</a>
                             <ul class="sub-menu">
-                                <li><a data-src="<?php echo STYLEDIR; ?>/uploads/Intrepid_Boat.jpg" href="<?php echo site_url('boats/410-evolution'); ?>">200 Flats</a></li>
-                                <li><a data-src="<?php echo STYLEDIR; ?>/uploads/grid-image1.jpg" href="<?php echo site_url('boats/410-evolution'); ?>">245 Center Console</a></li>
-                                <li><a data-src="<?php echo STYLEDIR; ?>/uploads/Intrepid_Boat.jpg" href="<?php echo site_url('boats/410-evolution'); ?>">300 Center Console</a></li>
-                                <li><a data-src="<?php echo STYLEDIR; ?>/uploads/grid-image1.jpg" href="<?php echo site_url('boats/410-evolution'); ?>">327 Cuddy</a></li>
-                                <li><a data-src="<?php echo STYLEDIR; ?>/uploads/Intrepid_Boat.jpg" href="<?php echo site_url('boats/410-evolution'); ?>">327-I Tourney Edition</a></li>
-                                <li><a data-src="<?php echo STYLEDIR; ?>/uploads/grid-image1.jpg" href="<?php echo site_url('boats/410-evolution'); ?>">327-I Center Console</a></li>
-                                <li><a data-src="<?php echo STYLEDIR; ?>/uploads/Intrepid_Boat.jpg" href="<?php echo site_url('boats/410-evolution'); ?>">345 Nomad FE</a></li>
-                                <li><a data-src="<?php echo STYLEDIR; ?>/uploads/grid-image1.jpg" href="<?php echo site_url('boats/410-evolution'); ?>">345 Nomad SE</a></li>
-                                <li><a data-src="<?php echo STYLEDIR; ?>/uploads/Intrepid_Boat.jpg" href="<?php echo site_url('boats/410-evolution'); ?>">345 Walkaround</a></li>
-                                <li><a data-src="<?php echo STYLEDIR; ?>/uploads/grid-image1.jpg" href="<?php echo site_url('boats/410-evolution'); ?>">375 Center Console</a></li>
-                                <li><a data-src="<?php echo STYLEDIR; ?>/uploads/Intrepid_Boat.jpg" href="<?php echo site_url('boats/410-evolution'); ?>">400 Center Console</a></li>
-                                <li><a data-src="<?php echo STYLEDIR; ?>/uploads/grid-image1.jpg" href="<?php echo site_url('boats/410-evolution'); ?>">407 Cuddy</a></li>
-                                <li><a data-src="<?php echo STYLEDIR; ?>/uploads/Intrepid_Boat.jpg" href="<?php echo site_url('boats/410-evolution'); ?>">407 Panacea</a></li>
-                                <li><a data-src="<?php echo STYLEDIR; ?>/uploads/grid-image1.jpg" href="<?php echo site_url('boats/410-evolution'); ?>">410 Evolution</a></li>
-                                <li><a data-src="<?php echo STYLEDIR; ?>/uploads/Intrepid_Boat.jpg" href="<?php echo site_url('boats/410-evolution'); ?>">430 Sport yacht</a></li>
-                                <li><a data-src="<?php echo STYLEDIR; ?>/uploads/grid-image1.jpg" href="<?php echo site_url('boats/410-evolution'); ?>">475 Panacea</a></li>
-                                <li><a data-src="<?php echo STYLEDIR; ?>/uploads/Intrepid_Boat.jpg" href="<?php echo site_url('boats/410-evolution'); ?>">475 Sport yacht</a></li>
+                                <li><a data-src="uploads/Intrepid_Boat.jpg" href="#">200 Flats</a></li>
+                                <li><a data-src="uploads/grid-image1.jpg" href="#">245 Center Console</a></li>
+                                <li><a data-src="uploads/Intrepid_Boat.jpg" href="#">300 Center Console</a></li>
+                                <li><a data-src="uploads/grid-image1.jpg" href="#">327 Cuddy</a></li>
+                                <li><a data-src="uploads/Intrepid_Boat.jpg" href="#">327-I Tourney Edition</a></li>
+                                <li><a data-src="uploads/grid-image1.jpg" href="#">327-I Center Console</a></li>
+                                <li><a data-src="uploads/Intrepid_Boat.jpg" href="#">345 Nomad FE</a></li>
+                                <li><a data-src="uploads/grid-image1.jpg" href="#">345 Nomad SE</a></li>
+                                <li><a data-src="uploads/Intrepid_Boat.jpg" href="#">345 Walkaround</a></li>
+                                <li><a data-src="uploads/grid-image1.jpg" href="#">375 Center Console</a></li>
+                                <li><a data-src="uploads/Intrepid_Boat.jpg" href="#">400 Center Console</a></li>
+                                <li><a data-src="uploads/grid-image1.jpg" href="#">407 Cuddy</a></li>
+                                <li><a data-src="uploads/Intrepid_Boat.jpg" href="#">407 Panacea</a></li>
+                                <li><a data-src="uploads/grid-image1.jpg" href="#">410 Evolution</a></li>
+                                <li><a data-src="uploads/Intrepid_Boat.jpg" href="#">430 Sport yacht</a></li>
+                                <li><a data-src="uploads/grid-image1.jpg" href="#">475 Panacea</a></li>
+                                <li><a data-src="uploads/Intrepid_Boat.jpg" href="#">475 Sport yacht</a></li>
                                 <li class="menu-content">
-                                    <a href="<?php echo site_url('boats'); ?>">View all models</a>
+                                    <a href="model.html">View all modules</a>
                                 </li>
                             </ul>
                         </li>
                         <li class="menu__item">
-                            <a href="<?php echo get_permalink( get_option( 'page_for_posts' ) ); ?>">News</a>
+                            <a href="#">News</a>
                         </li>
                         <li class="menu__item">
-                            <a href="<?php echo site_url('events'); ?>">Events</a>
+                            <a href="#">Events</a>
                         </li>
                         <li class="menu__item">
                             <a href="#">About</a>
@@ -97,6 +97,7 @@
                         </div>
                     </div>
                 </div>
+
             </nav>
             <ul class="quick-links">
                 <li class="quick-links__item">
